--- a/static/styles.css
+++ b/static/styles.css
@@ -22,3 +22,9 @@
   display: flex;
   flex-direction: column;
 }
+
+.table-of-contents-non-homepage {
+  display: flex;
+  flex-direction: column;
+  margin-top: 200px;
+}
